contrast issue

--- a/styles/base.css
+++ b/styles/base.css
@@ -91,11 +91,11 @@ main {
 
 .card h2 {
     display: inline-block;
-    color: var(--secondary-color);
+    color: var(--text-color);
     padding: 5px 20px;
     border-radius: 5px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    border: 2px solid #8368aa;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+    border: 2px solid var(--text-color);
     margin-bottom: 10px;
 }
 
